[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/clickable.gd" type="Script" id=2]
[ext_resource path="res://menu/menu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 136.0
margin_top = 70.0
margin_right = 264.0
margin_bottom = 230.0
rect_min_size = Vector2( 128, 0 )

[node name="GameLogo" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 16.0
text = "Lost Signal"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 20 )

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 128.0
margin_bottom = 80.0
text = "Play"
script = ExtResource( 2 )

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 128.0
margin_bottom = 120.0
text = "Options"
script = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 128.0
margin_bottom = 160.0
text = "Quit"
script = ExtResource( 2 )

[node name="Credits" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_bottom = -8.0
grow_vertical = 0
text = "Credits:
Albert L Chang - music & sounds
RedTeapot - idea, code, graphics, levels
Muzammil syed - levels"
__meta__ = {
"_edit_use_anchors_": false
}
